--- a/HTML/contakt.html
+++ b/HTML/contakt.html
@@ -8,18 +8,18 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="../CSS/contakt.css">
   <link rel="stylesheet" href="../CSS/adaptive.css">
-  <link rel="shourtcut icon" href="../ASSETS/IMG/icons/logo.jpg" type="image/png">
+  <link rel="shourtcut icon" href="../ASSETS/IMG/icon/logo.png" type="image/png">
 </head>
 <body>
     <header class="tayoheader">
         <div class="container">
             <div class="head">
-                <a href="../index.html"><img src="../ASSETS/IMG/icons/logo.jpg" alt="" class="logo"></a>
+                <a href="../index.html"><img src="../ASSETS/IMG/icon/logo.png" alt="" class="logo"></a>
                 <div class="link">
                     <nav class="navbar bg-body-tertiary">
                         <div class="nav-li">
                             <a href="model.html" class="navbar-brand">Модели</a>
-                            <a href="model.html" class="navbar-brand">Контакты</a>
+                            <a href="contakt.html" class="navbar-brand">Контакты</a>
                           <form class="d-flex" role="search">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                             <button class="btn" type="submit">Search</button>
@@ -105,25 +105,25 @@
         </section>
     </main>
     <footer>
-        <div class="container">
-            <div class="row-1">
-                <h2>Гордый партнёр команды России</h2>
-            </div>
-            <div class="row-2">
-                <a href="https://www.toyota.ru/"><img src="../ASSETS/IMG/icons/logo.jpg" alt="" class="logo-footer"></a>
-                <a href="http://instagram.com/toyotausa/"><img src="../ASSETS/IMG/icons/Instagram.jpg" alt="" class="pin"></a>
-                <a href="https://www.facebook.com/toyota"><img src="../ASSETS/IMG/icons/Facebook.jpg" alt="" class="pin"></a>
-            </div>
-            <div class="row-3">
-                <a href="https://www.toyota.ru/about-company/legal-information">Юридическая информация</a>
-                <a href="https://www.toyota.com/support/privacy-rights/">Заявление о конфедициальности</a>
-                <a href="https://www.toyota.com/support/site-map/">Карта сайта</a>
-            </div>
-            <div class="row-4">
-              <p>© ООО «Тойота Мотор», 2023</p>
-            </div>
-        </div>
-    </footer>
+      <div class="container">
+          <div class="row-1">
+              <h2>Гордый партнёр команды России</h2>
+          </div>
+          <div class="row-2">
+              <a href="https://www.toyota.ru/"><img src="../ASSETS/IMG/icon/logo.png" alt="" class="logo-footer"></a>
+              <a href="http://instagram.com/toyotausa/"><img src="../ASSETS/IMG/icon/instagram.png" alt="" class="pin"></a>
+              <a href="https://www.facebook.com/toyota"><img src="../ASSETS/IMG/icon/facebook.png" alt="" class="pin"></a>
+          </div>
+          <div class="row-3">
+              <a href="https://www.toyota.ru/about-company/legal-information">Юридическая информация</a>
+              <a href="https://www.toyota.com/support/privacy-rights/">Заявление о конфедициальности</a>
+              <a href="https://www.toyota.com/support/site-map/">Карта сайта</a>
+          </div>
+          <div class="row-4">
+            <p>© ООО «Тойота Мотор», 2023</p>
+          </div>
+      </div>
+  </footer>
 <script src="../JS/script.js" charset="utf-8"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
