--- a/HTML/model.html
+++ b/HTML/model.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-<meta charset="UTF-8">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Модели</title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<link rel="stylesheet" href="../CSS/model.css">
-<link rel="stylesheet" href="../CSS/adaptive.css">
-<link rel="shourtcut icon" href="../ASSETS/IMG/icons/logo.jpg" type="image/png">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Модели</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="../CSS/model.css">
+    <link rel="stylesheet" href="../CSS/adaptive.css">
+    <link rel="shourtcut icon" href="../ASSETS/IMG/icon/logo.png" type="image/png">
 </head>
 <body>
     <header class="tayoheader">
         <div class="container">
             <div class="head">
-                <a href="../index.html"><img src="../ASSETS/IMG/icons/logo.jpg" alt="" class="logo"></a>
+                <a href="../index.html"><img src="../ASSETS/IMG/icon/logo.png" alt="" class="logo"></a>
                 <div class="link">
                     <nav class="navbar bg-body-tertiary">
                         <div class="nav-li">
@@ -79,31 +79,31 @@
             <div class="container">
                 <div class="services">
                     <div class="servic-child">
-                        <img src="../ASSETS/IMG/service/konfigur.jpg" alt="">
+                        <img src="../ASSETS/IMG/services/konfigur.jpg" alt="">
                         <p><a href="https://www.toyota.ru/new-cars/model-filter"><span>Конфигуратор</span></a></p>
                     </div>
                     <div class="servic-child">
-                        <img src="../ASSETS/IMG/service/accessories.jpg" alt="">
+                        <img src="../ASSETS/IMG/services/accessories.jpg" alt="">
                         <p><a href="https://www.toyota.ru/owners/accessories/"><span>Аксессуары</span></a></p>
                     </div>
                 </div>
                 <div class="services">
                     <div class="servic-child">
-                        <img src="../ASSETS/IMG/service/credit.jpg" alt="">
+                        <img src="../ASSETS/IMG/services/credit.jpg" alt="">
                         <p><a href="https://www.toyota.ru/finance-insurance/toyota-fs/"><span>Кредитование</span></a></p>
                     </div>
                     <div class="servic-child">
-                        <img src="../ASSETS/IMG/service/assurance.jpg" alt="">
+                        <img src="../ASSETS/IMG/services/assurance.jpg" alt="">
                         <p><a href="https://www.toyota.ru/finance-insurance/insurance"><span>Страхование</span></a></p>
                     </div>
                 </div>
                 <div class="services">
                     <div class="servic-child">
-                        <img src="../ASSETS/IMG/service/trade-in.jpg" alt="">
+                        <img src="../ASSETS/IMG/services/trade-in.jpg" alt="">
                         <p><a href="https://www.toyota.ru/buy-a-toyota/used-cars/trade-in"><span>Программа Trade-in</span></a></p>
                     </div>
                     <div class="servic-child">
-                        <img src="../ASSETS/IMG/service/serprodukt.jpg" alt="">
+                        <img src="../ASSETS/IMG/services/serprodukt.png" alt="">
                         <p><a href="https://www.toyota.ru/owners/official-service/"><span>Сервисные продукты</span></a></p>
                     </div>
                 </div>
@@ -116,9 +116,9 @@
                 <h2>Гордый партнёр команды России</h2>
             </div>
             <div class="row-2">
-                <a href="https://www.toyota.ru/"><img src="../ASSETS/IMG/icons/logo.jpg" alt="" class="logo-footer"></a>
-                <a href="http://instagram.com/toyotausa/"><img src="../ASSETS/IMG/icons/Instagram.jpg" alt="" class="pin"></a>
-                <a href="https://www.facebook.com/toyota"><img src="../ASSETS/IMG/icons/Facebook.jpg" alt="" class="pin"></a>
+                <a href="https://www.toyota.ru/"><img src="../ASSETS/IMG/icon/logo.png" alt="" class="logo-footer"></a>
+                <a href="http://instagram.com/toyotausa/"><img src="../ASSETS/IMG/icon/instagram.png" alt="" class="pin"></a>
+                <a href="https://www.facebook.com/toyota"><img src="../ASSETS/IMG/icon/facebook.png" alt="" class="pin"></a>
             </div>
             <div class="row-3">
                 <a href="https://www.toyota.ru/about-company/legal-information">Юридическая информация</a>
