--- a/index.html
+++ b/index.html
@@ -8,25 +8,28 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   <link rel="stylesheet" href="CSS/style.css">
   <link rel="stylesheet" href="CSS/adaptive.css">
-  <link rel="shourtcut icon" href="ASSETS/IMG/icons/logo.jpg" type="image/png">
+  <link rel="shourtcut icon" href="ASSETS/IMG/icon/logo.png" type="image/png">
 </head>
 <body>
     <header class="tayoheader">
-        <div class="container">
-            <div class="head">
-                <a href="index.html"><img src="ASSETS/IMG/icons/logo.jpg" alt="" class="logo"></a>
-                <div class="link">
-                    <nav class="navbar bg-body-tertiary">
-                        <div class="nav-li">
-                            <a href="HTML/model.html" class="navbar-brand">Модели</a>
-                            <a href="HTML/contakt.html" class="navbar-brand">Контакты</a>
-                          <form class="d-flex" role="search">
-                            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn" type="submit">Search</button>
-                          </form>
-                        </div>
-                    </nav>
-                </div>
+        <div class="container header_container">
+          <div class="menu-burger__header">
+            <span></span>
+          </div>
+          <div class="head">
+            <a href="index.html"><img src="ASSETS/IMG/icon/logo.png" alt="" class="logo"></a>
+            <div class="link">
+                <nav class="navbar bg-body-tertiary header__nav">
+                    <div class="nav-li">
+                        <a href="HTML/model.html" class="navbar-brand">Модели</a>
+                        <a href="HTML/contakt.html" class="navbar-brand">Контакты</a>
+                        <form class="d-flex" role="search">
+                      <input class="form-control me-2 inp" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn" type="submit">Search</button>
+                      </form>
+                    </div>
+                </nav>
+            </div>
             </div>
         </div>
     </header>
@@ -35,43 +38,43 @@
                 <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
                     <div class="carousel-inner">
                       <div class="carousel-item active" data-bs-interval="1000">
-                        <img src="ASSETS/IMG/carusel/tayota1.jpg" class="d-block w-100" alt="...">
+                        <img src="ASSETS/IMG/carusel/tayo1.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h2>Toyota Chaser Jzx100</h2>
                         </div>
                       </div>
                       <div class="carousel-item" data-bs-interval="2000">
-                        <img src="ASSETS/IMG/carusel/tayota2.jpg" class="d-block w-100" alt="...">
+                        <img src="ASSETS/IMG/carusel/tayo2.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h2>Toyota GR Supra</h2>
                         </div>
                       </div>
                       <div class="carousel-item" data-bs-interval="2000">
-                        <img src="ASSETS/IMG/carusel/tayota3.jpg" class="d-block w-100" alt="...">
+                        <img src="ASSETS/IMG/carusel/tayo3.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h2>Toyota Mark II</h2>
                         </div>
                       </div>
                       <div class="carousel-item" data-bs-interval="2000">
-                        <img src="ASSETS/IMG/carusel/tayota4.jpg" class="d-block w-100" alt="...">
+                        <img src="ASSETS/IMG/carusel/tayo4.jpeg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h2>Toyota Camry xv70</h2>
                         </div>
                       </div>
                       <div class="carousel-item" data-bs-interval="2000">
-                        <img src="ASSETS/IMG/carusel/tayota5.jpg" class="d-block w-100" alt="...">
+                        <img src="ASSETS/IMG/carusel/tayo5.jpeg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h2>Toyota Auris</h2>
                         </div>
                       </div>
                       <div class="carousel-item" data-bs-interval="2000">
-                        <img src="ASSETS/IMG/carusel/tayota6.jpg" class="d-block w-100" alt="...">
+                        <img src="ASSETS/IMG/carusel/tayo6.jpeg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h2>Toyota Tacoma</h2>
                         </div>
                       </div>
                       <div class="carousel-item" data-bs-interval="2000">
-                        <img src="ASSETS/IMG/carusel/tayota7.jpg" class="d-block w-100" alt="...">
+                        <img src="ASSETS/IMG/carusel/tayo7.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
                           <h2>Toyota FJ Cruiser</h2>
                         </div>
@@ -104,9 +107,9 @@
                 <h2>Гордый партнёр команды России</h2>
             </div>
             <div class="row-2">
-                <a href="https://www.toyota.ru/"><img src="ASSETS/IMG/icons/logo.jpg" alt="" class="logo-footer"></a>
-                <a href="http://instagram.com/toyotausa/"><img src="ASSETS/IMG/icons/Instagram.jpg" alt="" class="pin"></a>
-                <a href="https://www.facebook.com/toyota"><img src="ASSETS/IMG/icons/Facebook.jpg" alt="" class="pin"></a>
+                <a href="https://www.toyota.ru/"><img src="ASSETS/IMG/icon/logo.png" alt="" class="logo-footer"></a>
+                <a href="http://instagram.com/toyotausa/"><img src="ASSETS/IMG/icon/instagram.png" alt="" class="pin"></a>
+                <a href="https://www.facebook.com/toyota"><img src="ASSETS/IMG/icon/facebook.png" alt="" class="pin"></a>
             </div>
             <div class="row-3">
                 <a href="https://www.toyota.ru/about-company/legal-information">Юридическая информация</a>
